fixed hover overlap bug

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -189,24 +189,31 @@ a:focus {
     font-size: 30px;
 }
 
-DIV.texthover {
+a.texthover {
     width:100%;
     display:block;
     position:relative;
     text-align: center!important;}
 
-DIV.texthover .overlay {
+a.texthover .overlay {
     position:absolute;
     top:45%;
     width:0;
     width:100%;
     height:50%;
     padding:10px;
-    background-color:rgba(0, 0, 0, 0.3);
+    background-color:rgba(0, 0, 0, 0.5);
+    font-size: 1.2em;
+    color: white;
     display:none;
 }
-DIV.texthover:hover .overlay {
+a.texthover:hover .overlay {
     display:block;
+}
+
+a.texthover:hover #middle-image {
+    border: 3px solid #28c3ab;
+    border-radius: 2px;
 }
 
 
